refactor(editor): change prefix from 'lib' to 'editor'

--- a/projects/editor/src/lib/components/edit-field-dialog/edit-field-dialog.component.html
+++ b/projects/editor/src/lib/components/edit-field-dialog/edit-field-dialog.component.html
@@ -4,13 +4,13 @@
         <header class="section-header">
             <h3 class="section-header-text">Properties</h3>
         </header>
-        <lib-edit-field
+        <editor-edit-field
             class="section-content"
             [field]="editField"
             [property]="property"
             [isSimplified]="true"
             (fieldChanged)="onFieldChanged()">
-        </lib-edit-field>
+        </editor-edit-field>
     </section>
 
     <section class="preview-section">
