--- a/projects/editor/src/lib/components/editor/editor.component.html
+++ b/projects/editor/src/lib/components/editor/editor.component.html
@@ -12,7 +12,7 @@
             {{ form.name }}
             <button class="close-btn" mat-icon-button (click)="editorService.removeForm(i)"><mat-icon>close</mat-icon></button>
         </ng-template>
-        <lib-form [form]="form"></lib-form>
+        <editor-form [form]="form"></editor-form>
     </mat-tab>
 </mat-tab-group>
 
