--- a/projects/editor/src/lib/components/edit-field/edit-field-styles/edit-field-styles.component.html
+++ b/projects/editor/src/lib/components/edit-field/edit-field-styles/edit-field-styles.component.html
@@ -2,7 +2,7 @@
     <h4 class="title">Style Self<span *ngIf="parentContainer">(Parent is a {{ getContainerName(parentContainer) }})</span></h4>
 
     <div class="breakpoints">
-        <lib-breakpoint
+        <editor-breakpoint
             titleText="All devices"
             [isExpanded]="true"
             >
@@ -10,15 +10,15 @@
                 *ngIf="parentContainer === containerType.GRID"
                 [ngTemplateOutlet]="gridOptions">
             </ng-container>
-            <lib-chip-list-property
+            <editor-chip-list-property
                 [target]="editField"
                 [property]="getProperty()"
                 [isSimplified]="true"
                 (targetChanged)="fieldChanged.emit()">
-            </lib-chip-list-property>
-        </lib-breakpoint>
+            </editor-chip-list-property>
+        </editor-breakpoint>
     
-        <lib-breakpoint
+        <editor-breakpoint
             *ngFor="let breakpointType of breakpointTypes"
             [titleText]="getBreakpointTitle(breakpointType)"
             [tooltipText]="getBreakpointTooltip(breakpointType)"
@@ -28,24 +28,24 @@
                 [ngTemplateOutlet]="gridOptions"
                 [ngTemplateOutletContext]="{ breakpointType: breakpointType }">
             </ng-container>
-            <lib-chip-list-property
+            <editor-chip-list-property
                 [target]="editField"
                 [property]="getProperty(breakpointType)"
                 [isSimplified]="true"
                 (targetChanged)="fieldChanged.emit()">
-            </lib-chip-list-property>
-        </lib-breakpoint>
+            </editor-chip-list-property>
+        </editor-breakpoint>
     </div>
     
     <ng-template #gridOptions let-breakpointType="breakpointType">
         <div class="container-sub-options">
-            <lib-container-option
+            <editor-container-option
                 *ngFor="let prefix of gridChildPrefixes"
                 [label]="getNameFromPrefix(prefix)"
                 [value]="getClassValue(prefix, breakpointType)"
                 [options]="gridNumberOptions"
                 (selectionChanged)="onClassChanged($event, prefix, breakpointType)">
-            </lib-container-option>
+            </editor-container-option>
         </div>
     </ng-template>
 </section>
@@ -53,16 +53,16 @@
 <section *ngIf="editField.canHaveChildren">
     <h4 class="title">Style Children</h4>
     
-    <lib-container-option
+    <editor-container-option
         [label]="'Container Type'"
         [value]="childrenContainer"
         [options]="containerTypes"
         [optionDisplayFn]="getContainerName"
         (selectionChanged)="onChildrenContainerChanged($event)">
-    </lib-container-option>
+    </editor-container-option>
     
     <div class="breakpoints">
-        <lib-breakpoint
+        <editor-breakpoint
             titleText="All devices"
             [isExpanded]="true"
             >
@@ -76,15 +76,15 @@
                     [ngTemplateOutlet]="childrenGridOptions">
                 </ng-container>
             </ng-container>
-            <lib-chip-list-property
+            <editor-chip-list-property
                 [target]="editField"
                 [property]="getChildrenProperty()"
                 [isSimplified]="true"
                 (targetChanged)="fieldChanged.emit()">
-            </lib-chip-list-property>
-        </lib-breakpoint>
+            </editor-chip-list-property>
+        </editor-breakpoint>
     
-        <lib-breakpoint
+        <editor-breakpoint
             *ngFor="let breakpointType of breakpointTypes"
             [titleText]="getBreakpointTitle(breakpointType)"
             [tooltipText]="getBreakpointTooltip(breakpointType)"
@@ -101,36 +101,36 @@
                     [ngTemplateOutletContext]="{ breakpointType: breakpointType }">
                 </ng-container>
             </ng-container>
-            <lib-chip-list-property
+            <editor-chip-list-property
                 [target]="editField"
                 [property]="getChildrenProperty(breakpointType)"
                 [isSimplified]="true"
                 (targetChanged)="fieldChanged.emit()">
-            </lib-chip-list-property>
-        </lib-breakpoint>
+            </editor-chip-list-property>
+        </editor-breakpoint>
     </div>
 
     <ng-template #childrenFlexOptions let-breakpointType="breakpointType">
         <div class="container-sub-options">
-            <lib-container-option
+            <editor-container-option
                 *ngFor="let prefix of flexContainerPrefixes"
                 [label]="getNameFromPrefix(prefix)"
                 [value]="getChildrenClassValue(prefix, breakpointType)"
                 [options]="flexOptions"
                 (selectionChanged)="onChildrenClassChanged($event, prefix, breakpointType)">
-            </lib-container-option>
+            </editor-container-option>
         </div>
     </ng-template>
 
     <ng-template #childrenGridOptions let-breakpointType="breakpointType">
         <div class="container-sub-options">
-            <lib-container-option
+            <editor-container-option
                 *ngFor="let prefix of gridContainerPrefixes"
                 [label]="getNameFromPrefix(prefix)"
                 [value]="getChildrenClassValue(prefix, breakpointType)"
                 [options]="gridNumberOptions"
                 (selectionChanged)="onChildrenClassChanged($event, prefix, breakpointType)">
-            </lib-container-option>
+            </editor-container-option>
         </div>
     </ng-template>
 </section>
