--- a/projects/editor/src/lib/components/edit-field/edit-field.component.html
+++ b/projects/editor/src/lib/components/edit-field/edit-field.component.html
@@ -1,22 +1,22 @@
 <mat-tab-group mat-stretch-tabs>
     <mat-tab label="General">
         <div class="tree-container">
-            <lib-object-property
+            <editor-object-property
                 [target]="field"
                 [property]="property"
                 [isSimplified]="isSimplified"
                 [isExpanded]="true"
                 [isRoot]="true"
                 (targetChanged)="fieldChanged.emit()">
-            </lib-object-property>
+            </editor-object-property>
         </div>
     </mat-tab>
     <mat-tab label="Styling">
         <div class="styling-wrapper">
-            <lib-edit-field-styles
+            <editor-edit-field-styles
                 [editField]="field"
                 (fieldChanged)="fieldChanged.emit()">
-            </lib-edit-field-styles>
+            </editor-edit-field-styles>
         </div>
     </mat-tab>
 </mat-tab-group>
