--- a/projects/editor/src/lib/components/property/object-array-properties/array-property.component.html
+++ b/projects/editor/src/lib/components/property/object-array-properties/array-property.component.html
@@ -1,4 +1,4 @@
-<lib-tree-item-header 
+<editor-tree-item-header 
     class="cursor-pointer"
     *ngIf="!isSimplified else simplifiedView"
     [treeLevel]="treeLevel"
@@ -16,7 +16,7 @@
         </span>
         <span>{{ '[ ' + childrenTarget.length + ' ]' }}</span>
     </span>
-</lib-tree-item-header>
+</editor-tree-item-header>
 
 <div *ngIf="!isSimplified" [class.hidden]="!isExpanded">
     <ng-container *ngTemplateOutlet="childPropertiesView"></ng-container>
@@ -47,7 +47,7 @@
 <ng-template #childPropertiesView>
     <ng-container *ngFor="let child of childProperties; let i = index; let last = last; trackBy: trackPropertyByKey">
         <ng-container [ngSwitch]="child.type">
-            <lib-object-property
+            <editor-object-property
                 *ngSwitchCase="propertyType.OBJECT"
                 [treeLevel]="treeLevel + 1"
                 [target]="childrenTarget"
@@ -55,9 +55,9 @@
                 [isSimplified]="isSimplified"
                 (remove)="onRemoveChild(i)"
                 (targetChanged)="targetChanged.emit()">
-            </lib-object-property>
+            </editor-object-property>
         
-            <lib-boolean-property
+            <editor-boolean-property
                 *ngSwitchCase="propertyType.BOOLEAN"
                 [treeLevel]="treeLevel + 1"
                 [property]="child"
@@ -65,9 +65,9 @@
                 [isSimplified]="isSimplified"
                 (remove)="onRemoveChild(i)"
                 (targetChanged)="targetChanged.emit()">
-            </lib-boolean-property>
+            </editor-boolean-property>
         
-            <lib-chip-list-property
+            <editor-chip-list-property
                 *ngSwitchCase="propertyType.CHIP_LIST"
                 [treeLevel]="treeLevel + 1"
                 [property]="propertyService.getAsChiplistProperty(child)"
@@ -75,9 +75,9 @@
                 [isSimplified]="isSimplified"
                 (remove)="onRemoveChild(i)"
                 (targetChanged)="targetChanged.emit()">
-            </lib-chip-list-property>
+            </editor-chip-list-property>
         
-            <lib-textarea-property
+            <editor-textarea-property
                 *ngSwitchCase="propertyType.TEXTAREA"
                 [treeLevel]="treeLevel + 1"
                 [property]="propertyService.getAsTextareaProperty(child)"
@@ -85,7 +85,7 @@
                 [isSimplified]="isSimplified"
                 (remove)="onRemoveChild(i)"
                 (targetChanged)="targetChanged.emit()">
-            </lib-textarea-property>
+            </editor-textarea-property>
         
             <ng-container *ngSwitchCase="propertyType.NUMBER">
                 <ng-container *ngTemplateOutlet="inputProperty"></ng-container>
@@ -94,14 +94,14 @@
                 <ng-container *ngTemplateOutlet="inputProperty"></ng-container>
             </ng-container>
             <ng-template #inputProperty>
-                <lib-input-property
+                <editor-input-property
                     [treeLevel]="treeLevel + 1"
                     [property]="propertyService.getAsInputProperty(child)"
                     [target]="childrenTarget"
                     [isSimplified]="isSimplified"
                     (remove)="onRemoveChild(i)"
                     (targetChanged)="targetChanged.emit()">
-                </lib-input-property>
+                </editor-input-property>
             </ng-template>
         </ng-container>
         <mat-divider *ngIf="isSimplified && !last"></mat-divider>
