--- a/src/styles.scss
+++ b/src/styles.scss
@@ -138,6 +138,6 @@ button.mat-icon-button {
     display: none !important;
 }
 
-lib-sidebar .resizing {
+editor-sidebar .resizing {
     transition: none !important;
 }
