--- a/projects/editor/src/lib/components/field-tree-item/field-tree-item.component.html
+++ b/projects/editor/src/lib/components/field-tree-item/field-tree-item.component.html
@@ -12,7 +12,8 @@
 </editor-tree-item-header>
 
 <div [class.hidden]="!isExpanded">
-    <editor-field-tree-item *ngFor="let child of childFields; trackBy: trackFieldById" [field]="child"
+    <editor-field-tree-item *ngFor="let child of childFields; trackBy: trackFieldById"
+                            [field]="child"
                             [treeLevel]="treeLevel + 1"
                             (remove)="onRemoveChildField(child)"
                             (expandParent)="onExpandParent()">
