--- a/projects/editor/src/lib/components/formly/editor-formly-group/editor-formly-group.component.scss
+++ b/projects/editor/src/lib/components/formly/editor-formly-group/editor-formly-group.component.scss
@@ -1,21 +1,4 @@
 :host {
     display: block;
-}
-
-.cdk-drop-list.edit-mode {
-    min-height: 48px;
-    min-width: 48px;
-    padding: 8px;
-    box-sizing: border-box;
-    border: 2px solid transparent;
-}
-
-.cdk-drop-list-receiving.edit-mode, .cdk-drop-list-dragging.edit-mode {
-    background-color: #F7FFEB;
-    border: 2px solid #EBEBEB;
-    border-radius: 4px;
-}
-
-.cdk-drop-list-dragging.edit-mode {
-    background-color: #BEFF5C;
+    min-width: max-content;
 }
