--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,6 @@ formly-field {
 }
 
 .cdk-drag-placeholder {
-    display: none !important;
     height: 40px;
     line-height: 40px;
     text-align: center;
@@ -22,9 +21,43 @@ formly-field {
     border-radius: 4px;
 }
 
+.grid .cdk-drag-placeholder {
+    display: none;
+}
+
+.cdk-drag-handle {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    cursor: move;
+}
+
 .cdk-drag-preview {
     outline: dashed 2px #7A7A7A;
     border-radius: 4px;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+                0 8px 10px 1px rgba(0, 0, 0, 0.14),
+                0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drop-list.edit-mode {
+    min-height: 48px;
+    min-width: 48px;
+    padding: 8px;
+    box-sizing: border-box;
+    border: 2px solid transparent;
+}
+
+.cdk-drop-list-receiving.edit-mode, .cdk-drop-list-dragging.edit-mode {
+    background-color: #F7FFEB;
+    border: 2px solid #EBEBEB;
+    border-radius: 4px;
+}
+
+.cdk-drop-list-dragging.edit-mode {
+    background-color: #BEFF5C;
 }
 
 .tree-container {
