feat(form): move isEditMode to form interface

--- a/projects/editor/src/lib/components/form/form.component.html
+++ b/projects/editor/src/lib/components/form/form.component.html
@@ -31,6 +31,7 @@
     <editor-form-toolbar
         class="toolbar"
         [(selectedDisplay)]="selectedFormDisplay"
+        [isEditMode$]="form.isEditMode$"
         (resetModel)="onResetModel()"
         (toggleSidebars)="showSidebars = $event">
     </editor-form-toolbar>
