--- a/projects/editor/src/lib/components/form/form.component.scss
+++ b/projects/editor/src/lib/components/form/form.component.scss
@@ -6,6 +6,11 @@
         .main mat-tab-header {
             display: none;
         }
+
+        .main .mat-tab-body-content {
+            padding: 8px;
+            box-sizing: border-box;
+        }
         
         .active-field-section .sidebar-section-content {
             padding: 0;
