--- a/projects/editor/src/lib/components/formly/editor-formly-group/editor-formly-group.component.html
+++ b/projects/editor/src/lib/components/formly/editor-formly-group/editor-formly-group.component.html
@@ -1,6 +1,6 @@
 <div [id]="field.fieldId"
     [class]="dropListClasses"
-    [class.edit-mode]="editorService.isEditMode"
+    [class.edit-mode]="isEditMode"
     cdkDropList
     [cdkDropListOrientation]="dropListOrientation"
     [cdkDropListSortingDisabled]="isGridContainer"
