--- a/projects/editor/src/lib/components/form/form-toolbar/form-toolbar.component.html
+++ b/projects/editor/src/lib/components/form/form-toolbar/form-toolbar.component.html
@@ -10,7 +10,7 @@
 </mat-button-toggle-group>
 
 <div class="action-buttons">
-    <mat-slide-toggle labelPosition="before" [(ngModel)]="editorService.isEditMode">Edit Mode</mat-slide-toggle>
+    <mat-slide-toggle labelPosition="before" [ngModel]="isEditMode$ | async" (ngModelChange)="isEditMode$.next($event)">Edit Mode</mat-slide-toggle>
     <button mat-icon-button matTooltip="Reset Form" (click)="resetModel.emit()">
         <mat-icon>restart_alt</mat-icon>
     </button>
