--- a/projects/editor/src/lib/components/edit-field/edit-field-dialog/edit-field-dialog.component.html
+++ b/projects/editor/src/lib/components/edit-field/edit-field-dialog/edit-field-dialog.component.html
@@ -26,7 +26,7 @@
             </div>
         </header>
         <div class="section-content preview-content">
-            <formly-form [form]="formGroup" [fields]="[previewField]" [model]="model"></formly-form>
+            <editor-formly-form [form]="formGroup" [fields]="[previewField]" [model]="model"></editor-formly-form>
         </div>
     </section>
 </mat-dialog-content>
