--- a/projects/editor/src/lib/components/form/form.component.html
+++ b/projects/editor/src/lib/components/form/form.component.html
@@ -31,7 +31,8 @@
     <editor-form-toolbar
         class="toolbar"
         [(selectedDisplay)]="selectedFormDisplay"
-        [isEditMode$]="form.isEditMode$"
+        [isEditMode]="isEditMode$ | async"
+        (isEditModeChange)="onEditModeChanged($event)"
         (resetModel)="onResetModel()"
         (toggleSidebars)="showSidebars = $event">
     </editor-form-toolbar>
@@ -39,14 +40,14 @@
         <mat-tab>
             <editor-formly-form
                 [form]="formGroup"
-                [fields]="fields"
+                [fields]="formFields"
                 [model]="form.model"
                 [options]="options"
                 (modelChange)="onModelChanged($event)">
             </editor-formly-form>
         </mat-tab>
         <mat-tab>
-            <pre><code>{{ fieldsJSON }}</code></pre>
+            <pre><code>{{ formFieldsJSON }}</code></pre>
         </mat-tab>
     </mat-tab-group>
 </div>
